tests/NormalTests/paczka1/fuzzy1/30237464.err
Error in line 6: by2HnNmRXN A985 14,4
Error in line 15: o6nyP98akR8 S84 68,9
Error in line 4: S84 S915 3,6
Error in line 22: o6nyP98akR8 A985 134,2
Error in line 20: S84 A580 44,7
Error in line 13: jPPfI A985 284,2
Error in line 14: NsePlI96aH A985 65,4
Error in line 10: by2HnNmRXN S915 8,8
Error in line 37: eqMf S84 18,9
